[modernize] Use Double.valueOf instead of new Double